// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar renders the Toolbar component 1`] = `
Array [
  <div
    className="toolbar-content"
    style={Object {}}
  >
    <div
      className="pusher-puller"
      style={
        Object {
          "transform": null,
        }
      }
    />
  </div>,
  <div
    className="toolbar expanded"
  >
    <div
      className="toolbar-body"
    >
      <div
        className="toolbar-actions"
      >
        <a
          aria-label="Edit"
          className="edit"
          href="/test/edit"
          onClick={[Function]}
        >
          <svg
            className="icon circled"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Edit</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </a>
        <a
          aria-label="Contents"
          href="/test/contents"
          onClick={[Function]}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Contents</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </a>
        <button
          aria-label="Add"
          className="add"
          id="toolbar-add"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Add</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
        <div
          className="toolbar-button-spacer"
        />
        <button
          aria-label="More"
          className="more"
          id="toolbar-more"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon mobile hidden"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>More</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <svg
            className="icon mobile only"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
      </div>
      <div
        className="toolbar-bottom"
      >
        <button
          aria-label="Personal tools"
          className="user"
          id="toolbar-personal"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Personal tools</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
      </div>
    </div>
    <div
      className="toolbar-handler"
    >
      <button
        aria-label="Shrink toolbar"
        className="toolbar-handler-button"
        onClick={[Function]}
      />
    </div>
  </div>,
  <div
    className="pusher"
  />,
]
`;

exports[`Toolbar renders the Toolbar component with lock 1`] = `
Array [
  <div
    className="toolbar-content"
    style={Object {}}
  >
    <div
      className="pusher-puller"
      style={
        Object {
          "transform": null,
        }
      }
    />
  </div>,
  <div
    className="toolbar expanded"
  >
    <div
      className="toolbar-body"
    >
      <div
        className="toolbar-actions"
      >
        <button
          aria-label="Unlock"
          className="unlock"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon unlock"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Unlock</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
        <a
          aria-label="Contents"
          href="/test/contents"
          onClick={[Function]}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Contents</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </a>
        <button
          aria-label="Add"
          className="add"
          id="toolbar-add"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Add</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
        <div
          className="toolbar-button-spacer"
        />
        <button
          aria-label="More"
          className="more"
          id="toolbar-more"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon mobile hidden"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>More</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <svg
            className="icon mobile only"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
      </div>
      <div
        className="toolbar-bottom"
      >
        <button
          aria-label="Personal tools"
          className="user"
          id="toolbar-personal"
          onClick={[Function]}
          tabIndex={0}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<title>Personal tools</title>undefined",
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "30px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </button>
      </div>
    </div>
    <div
      className="toolbar-handler"
    >
      <button
        aria-label="Shrink toolbar"
        className="toolbar-handler-button"
        onClick={[Function]}
      />
    </div>
  </div>,
  <div
    className="pusher"
  />,
]
`;
